attempt to fix minor nav problem on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -170,7 +170,6 @@ h1 {
 
 div {
   scroll-behavior: smooth;
-  scroll-padding-top: 50px;
 }
 
 [data-theme='light'] .spinner {
